[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contexter"
version = "0.1.0"
description = "Union-Find identity tracker for topology drift handling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["duckdb>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["contexter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
